aggiunto il render dei dropdown della nazionalità e lega nella ricerca giocatori
